fix connect bar and make add friends button more visible

--- a/user.css
+++ b/user.css
@@ -384,11 +384,16 @@ span.artist-artistVerifiedBadge-badge svg > path:last-of-type {
     min-width: 518px;
 }
 
+.main-buddyFeed-findFriendsButton {
+    color: var(--spice-sidebar-text);
+}
+
 .main-connectBar-connectBar {
     border-radius: 0 0 var(--main-corner-radius) var(--main-corner-radius);
     border: 2px solid var(--spice-main);
     border-top: 0;
-    color: var(--spice-sidebar-text);
+    background-color: var(--spice-button) !important;
+    color: var(--spice-text) !important;
 }
 
 .Root__nav-bar {
